[package]
name = "keylogger"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
rdev = "0.5.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
